--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "clsx": "^1.1.1",
     "font-awesome": "^4.7.0",
+    "material-ui-image": "^3.3.1",
     "netlify-cli": "^2.58.0",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
